--- a/css/style.css
+++ b/css/style.css
@@ -120,12 +120,12 @@
 
 .btn-lg {
   padding: 1.25rem 2rem;
-  font-size: .875rem;
+  font-size: 1rem;
 }
 
 .btn-sm {
   padding: .5rem .8rem;
-  font-size: .75rem;
+  font-size: .875rem;
 }
 
 .btn-primary {
